# FrameServer

./: CMakeLists.txt  CMakePresets.json  FrameServer.sln  README.md  vcpkg-configuration.json  vcpkg.json  versions.json
.github/workflows/: nuke-cicd.yml
frame_server/: CMakeLists.txt
frame_server/include/application/: argsparser.h  cancellation_token.h  common.h  common_include.h  logger.h  scheduler.h  thread_compat.h
frame_server/include/application/commands/: command.h  main_command.h  version_command.h
frame_server/include/domain/: args.h  args_value.h  main_args.h  version_args.h
frame_server/include/presentation/: main.h
frame_server/src/application/: common.cpp  common.linux.cpp  common.windows.cpp
frame_server/src/application/commands/: main_command.cpp  version_command.cpp
frame_server/src/presentation/: main.cpp
src/Application/: Application.cs  Application.csproj  ApplicationDefaults.cs
src/Application/Common/Extensions/: ILoggerExtensions.cs  InvokerUtils.cs  OpenCVExtensions.cs  TaskUtils.cs  ThreadHelpers.cs
src/Application/Common/Features/: AsyncAutoResetEvent.cs  GateKeeper.cs  Locker.cs  ValueKeeper.cs
src/Application/Configuration/Extensions/: ApplicationConfigurationExtensions.cs  CommonConfigurationExtensions.cs
src/Application/Configuration/Models/: FrameServerConfigFile.cs
src/Application/Configuration/Services/: FrameSourceConfigurationHolderService.cs  FrameSourceConfigurationService.cs
src/Application/Configuration/Workers/: FrameSourceConfigurationWorker.cs  FrameSourceConfigurationWorkers.cs
src/Application/FrameStreamer/Features/: FrameEncoderBuffer.cs  FrameSourceRuntime.cs  FrameSourceStream.cs
src/Application/FrameStreamer/Workers/: FrameStreamerWorker.cs
src/Domain/Events/: FrameSourceAddedEventArgs.cs  FrameSourceModifiedEventArgs.cs  FrameSourceRemovedEventArgs.cs
src/Domain/Models/: FrameSourceConfig.cs
src/Infrastructure.Serilog/: Infrastructure.Serilog.csproj  SerilogInfrastructure.cs
src/Infrastructure.Serilog/Common/: LoggerBuilder.cs
src/Presentation/: Presentation.cs  Presentation.csproj  frame_server_config.001.yml  frame_server_config.002.yml  frame_server_config.yml
src/Presentation/Commands/: BaseCommand.cs  DaemonInstallCommand.cs  DaemonLogsCommand.cs  DaemonStartCommand.cs  DaemonStopCommand.cs  DaemonUninstallCommand.cs  MainCommand.cs  UpdateCommand.cs
src/Presentation/Controllers/: WeatherForecastController.cs
src/Presentation/Properties/: launchSettings.json
src/Presentation/Services/: ClientManager.cs
vcpkg_patch/: chainload-toolchain.cmake
vcpkg_patch/ports/at-spi2-core1/: portfile.cmake  vcpkg.json
vcpkg_patch/ports/cairo/: ctime_static_fix.patch  portfile.cmake  remove_xrender_x11_impl_polyfill.patch
vcpkg_patch/ports/dbus/: portfile.cmake
vcpkg_patch/ports/gtk31/: portfile.cmake  vcpkg.json
